corection index.html

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -168,3 +168,10 @@ width: 30%;
   color: #4e75ff;
 }
 
+.end-loader {
+  color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
