--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,14 +25,15 @@ img {
 
 
 /* очікування */
+/* Загальні стилі для лоадера */
 .loader {
-        width: 48px;
-        height: 48px;
+        width: 28px;
+        height: 28px;
         border-radius: 50%;
         position: relative;
-        animation: rotate 1s linear infinite
+        animation: rotate 2s linear infinite
       }
-      .loader::before , .loader::after {
+.loader::before , .loader::after {
         content: "";
         box-sizing: border-box;
         position: absolute;
@@ -41,18 +42,18 @@ img {
         border: 5px solid #FFF;
         animation: prixClipFix 2s linear infinite ;
       }
-      .loader::after{
+.loader::after{
         border-color: #FF3D00;
-        animation: prixClipFix 2s linear infinite , rotate 0.5s linear infinite reverse;
+        animation: prixClipFix 2s linear infinite , rotate 1s linear infinite reverse;
         inset: 6px;
       }
 
-      @keyframes rotate {
+@keyframes rotate {
         0%   {transform: rotate(0deg)}
         100%   {transform: rotate(360deg)}
       }
 
-      @keyframes prixClipFix {
+@keyframes prixClipFix {
           0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
           25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
           50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
